--- a/BrewInfo/BrewInfo/Resources/Base.lproj/Main.storyboard
+++ b/BrewInfo/BrewInfo/Resources/Base.lproj/Main.storyboard
@@ -45,11 +45,30 @@
                                             <rect key="frame" x="0.0" y="0.0" width="344" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C1Q-In-zFH">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ckp-kF-4jF">
                                                     <rect key="frame" x="0.0" y="0.0" width="344" height="140"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DLW-ca-Xvp">
-                                                            <rect key="frame" x="16" y="16" width="312" height="108"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ujK-ak-pQY" customClass="CustomImageView" customModule="BrewInfo" customModuleProvider="target">
+                                                            <rect key="frame" x="20" y="20" width="100" height="100"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="100" id="MuM-0a-lAi"/>
+                                                                <constraint firstAttribute="width" constant="100" id="WOE-Md-nxm"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjW-p3-2hv">
+                                                            <rect key="frame" x="136" y="16" width="192" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="blM-C7-KBF"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U3d-O9-y7p">
+                                                            <rect key="frame" x="136" y="53" width="192" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="zOX-ub-TET"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -57,23 +76,30 @@
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstItem="DLW-ca-Xvp" firstAttribute="centerX" secondItem="C1Q-In-zFH" secondAttribute="centerX" id="1E9-Cq-32e"/>
-                                                        <constraint firstAttribute="bottom" secondItem="DLW-ca-Xvp" secondAttribute="bottom" constant="16" id="QiF-zs-gDW"/>
-                                                        <constraint firstItem="DLW-ca-Xvp" firstAttribute="leading" secondItem="C1Q-In-zFH" secondAttribute="leading" constant="16" id="VIC-Dh-unL"/>
-                                                        <constraint firstItem="DLW-ca-Xvp" firstAttribute="centerY" secondItem="C1Q-In-zFH" secondAttribute="centerY" id="YDc-p5-nwe"/>
-                                                        <constraint firstItem="DLW-ca-Xvp" firstAttribute="top" secondItem="C1Q-In-zFH" secondAttribute="top" constant="16" id="bhu-wh-QQp"/>
+                                                        <constraint firstAttribute="trailing" secondItem="gjW-p3-2hv" secondAttribute="trailing" constant="16" id="42x-gg-qSP"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="U3d-O9-y7p" secondAttribute="bottom" constant="16" id="GyI-MM-9el"/>
+                                                        <constraint firstAttribute="trailing" secondItem="U3d-O9-y7p" secondAttribute="trailing" constant="16" id="JuQ-gt-SUh"/>
+                                                        <constraint firstItem="gjW-p3-2hv" firstAttribute="top" secondItem="Ckp-kF-4jF" secondAttribute="top" constant="16" id="TNY-tB-84X"/>
+                                                        <constraint firstItem="ujK-ak-pQY" firstAttribute="top" secondItem="Ckp-kF-4jF" secondAttribute="top" constant="20" id="UTG-pH-hkp"/>
+                                                        <constraint firstItem="U3d-O9-y7p" firstAttribute="leading" secondItem="ujK-ak-pQY" secondAttribute="trailing" constant="16" id="YKo-Jw-lMe"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ujK-ak-pQY" secondAttribute="bottom" constant="20" id="YPR-8F-jAs"/>
+                                                        <constraint firstItem="U3d-O9-y7p" firstAttribute="top" secondItem="gjW-p3-2hv" secondAttribute="bottom" constant="16" id="YSf-2k-Cor"/>
+                                                        <constraint firstItem="gjW-p3-2hv" firstAttribute="leading" secondItem="ujK-ak-pQY" secondAttribute="trailing" constant="16" id="ZlT-Ae-WMO"/>
+                                                        <constraint firstItem="ujK-ak-pQY" firstAttribute="leading" secondItem="Ckp-kF-4jF" secondAttribute="leading" constant="20" id="xJT-eC-SuE"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="C1Q-In-zFH" secondAttribute="bottom" id="1Y0-QP-4Ki"/>
-                                                <constraint firstItem="C1Q-In-zFH" firstAttribute="leading" secondItem="QGi-VY-kol" secondAttribute="leading" id="Bf4-JX-aQk"/>
-                                                <constraint firstAttribute="trailing" secondItem="C1Q-In-zFH" secondAttribute="trailing" id="QDo-bt-azh"/>
-                                                <constraint firstItem="C1Q-In-zFH" firstAttribute="top" secondItem="QGi-VY-kol" secondAttribute="top" id="Zgv-jx-ijr"/>
+                                                <constraint firstItem="Ckp-kF-4jF" firstAttribute="top" secondItem="QGi-VY-kol" secondAttribute="top" id="1aq-rM-BQP"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ckp-kF-4jF" secondAttribute="bottom" id="Seu-0Q-vTV"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ckp-kF-4jF" secondAttribute="trailing" id="fWX-cq-ZcX"/>
+                                                <constraint firstItem="Ckp-kF-4jF" firstAttribute="leading" secondItem="QGi-VY-kol" secondAttribute="leading" id="hos-h8-nSm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="lblTitle" destination="DLW-ca-Xvp" id="J5C-Kv-xxt"/>
+                                            <outlet property="imgLogo" destination="ujK-ak-pQY" id="GbT-rA-tnu"/>
+                                            <outlet property="lblTagLine" destination="U3d-O9-y7p" id="BD7-ck-vmp"/>
+                                            <outlet property="lblTitle" destination="gjW-p3-2hv" id="ayo-be-TtU"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -103,8 +129,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="muw-X7-qdz" customClass="CustomImageView" customModule="BrewInfo" customModuleProvider="target">
+                                <rect key="frame" x="96.666666666666686" y="109" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="Ri2-xw-Qdu"/>
+                                    <constraint firstAttribute="width" constant="200" id="pHn-Gd-X8W"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Oz-5U-yNn">
-                                <rect key="frame" x="16" y="438.66666666666669" width="361" height="0.0"/>
+                                <rect key="frame" x="16" y="359" width="361" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -113,16 +146,18 @@
                         <viewLayoutGuide key="safeArea" id="UMG-nC-Pgg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="3Oz-5U-yNn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="UMG-nC-Pgg" secondAttribute="top" constant="100" id="24U-wa-Sk1"/>
-                            <constraint firstItem="3Oz-5U-yNn" firstAttribute="centerY" secondItem="UMG-nC-Pgg" secondAttribute="centerY" id="Jxr-Tu-Jjz"/>
-                            <constraint firstItem="3Oz-5U-yNn" firstAttribute="leading" secondItem="UMG-nC-Pgg" secondAttribute="leading" constant="16" id="VEk-x5-hkA"/>
+                            <constraint firstItem="3Oz-5U-yNn" firstAttribute="leading" secondItem="M0Z-Sm-FVa" secondAttribute="leading" constant="16" id="1YS-vs-XeY"/>
+                            <constraint firstItem="muw-X7-qdz" firstAttribute="centerX" secondItem="UMG-nC-Pgg" secondAttribute="centerX" id="Drm-0F-BJN"/>
+                            <constraint firstItem="3Oz-5U-yNn" firstAttribute="top" secondItem="muw-X7-qdz" secondAttribute="bottom" constant="50" id="TsQ-HM-gWq"/>
                             <constraint firstItem="UMG-nC-Pgg" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3Oz-5U-yNn" secondAttribute="bottom" constant="100" id="Ybx-sd-5UD"/>
+                            <constraint firstItem="muw-X7-qdz" firstAttribute="top" secondItem="UMG-nC-Pgg" secondAttribute="top" constant="50" id="nx5-Kj-Yfm"/>
                             <constraint firstItem="3Oz-5U-yNn" firstAttribute="centerX" secondItem="UMG-nC-Pgg" secondAttribute="centerX" id="wc9-ag-rXw"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="BrewDetail" largeTitleDisplayMode="always" id="6jN-Up-E1u" userLabel="BrewDetail"/>
                     <connections>
                         <outlet property="descriptionLbl" destination="3Oz-5U-yNn" id="Hjt-ih-rVH"/>
+                        <outlet property="logoImg" destination="muw-X7-qdz" id="3K7-8d-plh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HH0-n4-S7p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
